# mindai

./: .env.sample  .gitignore  README.md  pyproject.toml
aim/: config.py  constants.py
aim/agents/: __init__.py  persona.py  roster.py
aim/chat/: __init__.py  app.py  manager.py  util.py
aim/conversation/: embedding.py  index.py  loader.py  message.py  model.py
aim/io/: documents.py  jsonl.py
aim/llm/: completion.py  llm.py  models.py
aim/pipeline/: analyst.py  base.py  daydream.py  factory.py  journaler.py  philosopher.py  summarizer.py
aim/server/: __main__.py  serverapi.py
aim/task/: consumer.py  producer.py  queue.py
aim/tool/: dto.py  formatting.py  loader.py
aim/utils/: gram.py  keywords.py  string.py  turns.py  xml.py
aim/worker/: consumer.py  producer.py
config/: models.yaml
config/persona/: Andi.json  Corroded.json  Tiberius.json  assistant.json
config/tools/: communication.yaml  file_operations.yaml  knowledge_base.yaml  media.yaml  memory.yaml  pipeline.yaml  self_rag.yaml  system.yaml  weather.yaml  web_open_url.yaml  web_search.yaml  wikipedia.yaml
docs/: api.md  backend.md  frontend.md
mindai/: config.py  constants.py
mindai/agents/: __init__.py  persona.py  roster.py
mindai/chat/: __init__.py  app.py  manager.py  util.py
mindai/conversation/: embedding.py  index.py  loader.py  message.py  model.py
mindai/io/: documents.py  jsonl.py
mindai/llm/: completion.py  llm.py  models.py
public/: aim-chat.js  index.html  mind-ai-chat.js  service-worker.js
webui/: .prettierrc  package-lock.json  package.json  svelte.config.js
(+178 files in other folders)
